Fix bug -- select text-overflow problem

--- a/src/sass/_select.scss
+++ b/src/sass/_select.scss
@@ -98,6 +98,7 @@
 
 
 .au-select-content {
+  overflow: hidden;
   display: flex;
   flex-wrap: wrap;
   margin-right: 20px;
@@ -106,6 +107,7 @@
 
 .au-select-text {
   margin-right: 20px;
+  @include text-overflowing();
 }
 
 
